--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,8 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="vermeir.ines.ehb.be.androidwerkstuk.MapsActivity"
+    tools:context="vermeir.ines.ehb.be.androidwerkstuk.View.MapsActivity"
     tools:layout_editor_absoluteY="81dp">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -18,7 +32,7 @@
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent"
-        tools:context="vermeir.ines.ehb.be.androidwerkstuk.MapsActivity" />
+        tools:context="vermeir.ines.ehb.be.androidwerkstuk.View.MapsActivity" />
 
     <ImageButton
         android:id="@+id/qrButton"
@@ -26,10 +40,10 @@
         android:layout_height="85dp"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/zxing_transparent"
         android:onClick="scanForQRCode"
         android:scaleType="fitXY"
-        android:src="@drawable/qrcodebtn"
+        android:src="@drawable/ic_qrcodebtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginRight="16dp" />
