--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="vermeir.ines.ehb.be.androidwerkstuk.QuestionActivity">
+    tools:context="vermeir.ines.ehb.be.androidwerkstuk.View.QuestionActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
