--- a/app/src/main/res/layout/content_question.xml
+++ b/app/src/main/res/layout/content_question.xml
@@ -5,8 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="vermeir.ines.ehb.be.androidwerkstuk.QuestionActivity"
+    tools:context="vermeir.ines.ehb.be.androidwerkstuk.View.QuestionActivity"
     tools:showIn="@layout/activity_question">
+
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/info_statue"
@@ -18,4 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="79dp" />
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
 </android.support.constraint.ConstraintLayout>
