--- a/app/src/main/res/layout/content_information.xml
+++ b/app/src/main/res/layout/content_information.xml
@@ -10,18 +10,35 @@
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/info_statue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="72dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="79dp" />
+        <fragment
+            android:id="@+id/buttonsFragment"
+            android:name="vermeir.ines.ehb.be.androidwerkstuk.View.ButtonFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="top"
+            android:layout_weight="1" />
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <fragment
+                android:id="@+id/textFragment"
+                android:name="vermeir.ines.ehb.be.androidwerkstuk.View.TextFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="2" />
+        </android.support.v4.widget.NestedScrollView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:onClick="backToMap"
+            android:text="@string/continue_the_tour" />
 
     </android.support.v7.widget.LinearLayoutCompat>
 
