--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -10,4 +10,9 @@
         android:layout_height="match_parent"
         android:padding="10dp"/>
 
+    <ImageView
+        android:id="@+id/fotoStatue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </FrameLayout>
