--- a/app/src/main/res/layout/content_information.xml
+++ b/app/src/main/res/layout/content_information.xml
@@ -19,21 +19,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:layout_weight="1" />
+            android:layout_weight="2" />
 
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
 
             <fragment
                 android:id="@+id/textFragment"
                 android:name="vermeir.ines.ehb.be.androidwerkstuk.View.TextFragment"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2" />
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                />
 
 
-        </android.support.v4.widget.NestedScrollView>
+
 
         <Button
             android:layout_width="match_parent"
