--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -8,7 +8,8 @@
         android:id="@+id/txtInfo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:scrollbars="vertical"/>
 
     <ImageView
         android:id="@+id/fotoStatue"
